<resources>
    <string name="app_name">Assignment 2</string>
    <string name="underweight">Underweight 🟡</string>
    <string name="normal">Normal 🟢</string>
    <string name="overweight">Overweight 🟠</string>
    <string name="obese">Obese 🔴</string>
    <string name="extreme_obese">Extreme Obese 🛑</string>
    <string name="bmi_result_sheet_title">Your BMI is:</string>
    <string name="bmi_preference_file_key">BMI_PREFERENCE_FILE_KEY</string>
    <string name="saved_person_name_key">SAVED_PERSON_NAME_KEY</string>
    <string name="saved_person_gender_key">SAVED_PERSON_GENDER_KEY</string>
    <string name="saved_person_height_key">SAVED_PERSON_HEIGHT_KEY</string>
    <string name="saved_person_weight_key">SAVED_PERSON_WEIGHT_KEY</string>
    <string name="saved_person_age_key">SAVED_PERSON_AGE_KEY</string>
    <string name="clock_digit_zero">0</string>
    <string name="bmi_activity_toolbar_title">BMI Calculator</string>
    <string name="bmi_activity_header">Body Mass Index Calculator</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="gender_hint">Gender</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="height_starting_value">130cm</string>
    <string name="weight_starting_value">30kg</string>
    <string name="save_button_text">Save</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="timer_activity_header">Countdown Timer</string>
    <string name="timer_toolbar_title">Timer</string>
    <string name="hours_edit_text_hint">Hours</string>
    <string name="minutes_edit_text_hint">Minutes</string>
    <string name="seconds_edit_text_hint">Seconds</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Rather not say</item>
    </string-array>
</resources>